###################################################################################################
 1.3.2b1 - 2010-xx-xx - Revision: xxxx
###################################################################################################

    - Issue 3504: Firebug lite: jQuery.ajax call fails in IE
    - Issue 3524: Firebug Lite Style Panel doesn't work if the native Element is extended
    - infoTips for CSS properties such as color and image 
    - Unifying Firebug Lite internal cache system (to be used in sourceCache). 
      As a bonus, the unified model allows Firebug Lite to adapt its cache when 
      new elements are inserted into the document, which means that now it will 
      be easier to use the Inspector in dynamically created content.


###################################################################################################
 1.3.1 - 2010-09-07 - Revision: 7759
###################################################################################################

Overview:
    - Issue 3272: Install Google Chrome extension results in a 404 error
    - Issue 3384: Just two inadvertent globals across the Firebug Lite files
    - Issue 3318: Firebug Lite dies if you hide the UI when the large command line is open
    - Issue 3181: Firebug Lite Missing XHR methods/properties
    - Issue 3262: CSS specificity is not being calculated properly.
    - Issue 3038: Empty (null) styles when adding CSS styles in Firebug Lite
    - Normalizing syntax (missing semicolons)
    - Added basic JsDoc comment markup


###################################################################################################
 1.3.1b2 - 2010-07-26 - Revision: 7413
###################################################################################################

Overview:
    - Issue 3224: Firebug Lite shows error when trying to read some external stylesheets
    - Issue 3181: Missing XHR methods/properties
    - Custom Net response viewers (XML and JSON viewers)