@@ -434,13 +434,15 @@ var findLocation =  function findLocation()
     {
         var Env = FBL.Env;
         
+        // Always use the local skin when running in the same domain
+        // See Issue 3554: Firebug Lite should use local images when loaded locally
+        Env.useLocalSkin = path.indexOf(location.protocol + "//" + location.host + "/") == 0;
+        
         // detecting development and debug modes via file name
         if (fileName == "firebug-lite-dev.js")
         {
             Env.isDevelopmentMode = true;
             Env.isDebugMode = true;
-            // only use the local skin when running in the same domain
-            Env.useLocalSkin = path.indexOf(location.protocol + "//" + location.host + "/") == 0;
         }
         else if (fileName == "firebug-lite-debug.js")
         {
